syntax = "proto3";

option go_package = "generated/auth_service";

package auth_service;

service AuthService {
  rpc RegisterUser (RegisterRequest) returns (RegisterResponse);
  rpc LoginUser (LoginRequest) returns (LoginResponse);
  rpc LogoutUser(LogoutRequest) returns (LogoutResponse);
  rpc GetUserProfile (GetUserProfileRequest) returns (GetUserProfileResponse);
  rpc UpdateUserProfile (UpdateUserProfileRequest) returns (UpdateUserProfileResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string fullName = 4;  // Profil uchun qo'shimcha maydon
}

message RegisterResponse {
  string message = 1;
}

message LoginRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message LoginResponse {
  string user_id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
}

message LogoutRequest {
  string user_id = 1;
}

message LogoutResponse {
  string message = 1;
}

message GetUserProfileRequest {
  string username = 1;  // Yoki token orqali foydalanuvchini aniqlash
}

message GetUserProfileResponse {
  string fullname = 1;
  string username = 2;
  string date_of_birth = 3;
  string phone_number = 4;
  string address = 5;
}

message UpdateUserProfileRequest {
  string user_id = 1;
  string username = 2;
  string fullName = 3;
  string date_of_birth = 4;
  string phone_number = 5;
  string address = 6;
}

message UpdateUserProfileResponse {
  string message = 1;
}
